2 May 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- bug fix for VC 7.1 in test suite
- bug fix for sun compiler in Apollonius_graph_2.h

28 April 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- fixed bugs in test suite and examples, created by the changes of April 25th

26 April 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- CC-5.30_SunOS-5.8 was complaining about the static constants of the
  Parabola_2 and Hyperbola_ray_2 classes; these constants are now given
  my static methods

25 April 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
- changes in the traits: moved the various functors from
  predicates/Apollonius_graph_predicates_C2.h to separate files named
  predicates/Ag2_*.h; the two traits classes have been appropriately modified
- the Apollonius_graph_face_base_2.h file no longer exists; changed the data
  structures so that the requirement is now Triangulation_gace_base_2<Gt>;
  this reduces the memory requirements
- the version before these (major) changes can be recovered using the tag
  before_design_changes_April_2004
- the doc has been appropriately modified to reflect the changes in the
  requirements of the face base class
- the doc for the Apollonius_graph_2 class has been modified to define
  size_type; also the types that are typedefs from the data structure are now
  defined as typedefs instead of nested types

13 April 2004 Menelaos Karavelas 
- split the apollonius graph test suite into three separate parts;
  this will hopefully decrease compilation time and memory requirements
  for the compilation

25 March 2004 Radu Ursu
- made doc work with the current manual tools implementation

1.68 (08 February 2004) [rursu]
- updated the headers of the examples files

1.67 (1 February 2004) [mk]
- fixed bugs that gcc 3.4 was complaining about; mainly added "this->"
  in front of inherited methods

1.66 (25 January 2004) [mk]
- make some undocumented methods protected in Apollonius_graph_2;