@@ -413,23 +413,21 @@ public:
 public:
   // CIRCULATORS
   //------------
-  // I had to add the initialization of Face_handle to NULL because
-  // CGAL-2.5-I-82 was not working with Face_handle()
   Face_circulator
   incident_faces(Vertex_handle v,
-		 Face_handle f = Face_handle(NULL)) const {
+		 Face_handle f = Face_handle()) const {
     return DG::incident_faces(v, f);
   }
 
   Vertex_circulator
   incident_vertices(Vertex_handle v,
-		    Face_handle f = Face_handle(NULL)) const { 
+		    Face_handle f = Face_handle()) const { 
     return DG::incident_vertices(v, f);
   }
 
   Edge_circulator
   incident_edges(Vertex_handle v,
-		 Face_handle f = Face_handle(NULL)) const {
+		 Face_handle f = Face_handle()) const {
     return DG::incident_edges(v, f);
   }
  
@@ -488,7 +486,7 @@ public:
   }
 
   Vertex_handle  insert(const Site_2& p) {
-    return insert(p, NULL);
+    return insert(p, Vertex_handle());
   }
 
   Vertex_handle  insert(const Site_2& p, Vertex_handle vnear);
