@@ -1,3 +1,8 @@
+13 May 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
+- replaced Vertex_handle(NULL) by Vertex_handle()
+- replaced comparisons of vertex and face handles against NULL by
+  comparisons against {Vertex,Face}_handle()
+
 2 May 2004:  Menelaos Karavelas <mkaravel@cse.nd.edu>
 - bug fix for VC 7.1 in test suite
 - bug fix for sun compiler in Apollonius_graph_2.h
